--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "imap-simple": "^5.1.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "midtrans-client": "^1.4.3",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
