--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "^10.4.20",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
